--- a/src/page/login.ejs
+++ b/src/page/login.ejs
@@ -4,55 +4,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Heimer</title>
-    <link rel="stylesheet" type="text/css" href="/src/css/sigin.css">
-    <link rel="shortcut icon" type="image/png" href= "logo-codepen.svg">
-    
+    <title>MewShop</title>
+    <link rel="stylesheet" href="/css/sigin.css">
+    <link rel="shortcut icon" type="image/png" href= "/img/logo/logopage.png">
 </head>
 <body>
     <section>
         <div class="login">
-            <div class="title">Welcome to Heimer:3</div>
-            <div class="des">
-                Did you can?
-            </div>
+            <div class="title">Chào mừng đến MewShop</div>
             <div class="group">
                 <input type="text" id="username"
-                    placeholder="Enter username">
+                    placeholder="Tên người dùng">
             </div>
             <div class="group">
                 <input type="password" id="password"
-                    placeholder="Password">
+                    placeholder="Mật khẩu">
                 <span id="showPassword">
                     <ion-icon name="eye-outline"></ion-icon>
                     <ion-icon name="eye-off-outline"></ion-icon>
                 </span>
             </div>
             <div class="recovey">
-                <p><a href="https://trinhtrongphuock66hus.github.io/recoverypassword/">Recovery password</a></p>
+                <p>Quên mật khẩu? <a href="/repass">Đặt lại mật khẩu</a></p>
             </div>
             <div class="signIn">
-                <button type="submit">Sign In</button>
-            </div>
-            <div class="or">Or continue with</div>
-            <div class="list">
-                <div class="item">
-                    <a></a>
-                </div>
-                <div class="item">
-                    <a></a>
-                </div>
-                <div class="item">
-                    <a></a>
-                </div>
+                <button type="submit">Đăng nhập</button>
             </div>
             <div class="register">
-                Not a member? <a href="https://trinhtrongphuock66hus.github.io/register/">Register now</a>
+                Chưa có tài khoản? <a href="/register">Đăng ký</a>
             </div>
         </div>
         
     </section>
-<script src="abc.js"></script>
+<script src="/js/login.js"></script>
 <script type = "module" src = "https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js" > </script> 
 <script nomodule src = "https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
