--- a/src/page/homelogin.ejs
+++ b/src/page/homelogin.ejs
@@ -34,32 +34,33 @@
             </div>
         </header>
         <div class="list"></div>
+
     </div>
     <div class="card">
         <div class="titlecard">Giỏ hàng</div>
-        <div class="logocard"><img src="/img/logo/bag.png"></div>
-        <p>Đăng nhập để xem Giỏ hàng</p>
-        <div class="loginalert">
-            <a href="/login"><div>Đăng nhập</div></a>
-            <a href="/register"><div>Đăng ký</div></a>
+        <ul class="listCard"></ul>
+        <div class="checkout">
+            <div class="total">0</div>
+            <a href="/home/pay"><div class="thanhtoan">Thanh toán</div></a>
         </div>
     </div>
     <div class="tabalert">
         <div class="titlealert">Thông báo</div>
-        <div class="logoalert"><img src="/img/logo/alert.png"></div>
-        <p>Đăng nhập để xem Thông báo</p>
-        <div class="loginalert">
-            <a href="/login"><div>Đăng nhập</div></a>
-            <a href="/register"><div>Đăng ký</div></a>
-        </div>
+        <ul class="mesalert"></ul>
     </div>
     <div class="carduser">
-        <a href="/login"><div class="username"><img src="/img/logo/login.png"><%= username%></div></a>
-        <a href="/register"><div class="logout" ><img src="/img/logo/signup.png">Đăng ký</div></a>
+        <div class="username"><img src="/img/logo/user.png"><%= username%></div>
+        <div class="logout" onclick="logout()"><img src="/img/logo/logout.png">Đăng xuất</div>
     </div>
 <script>
+var unreadmes = <%- JSON.stringify(mesalertunread) %>;
+var mesalert = <%- JSON.stringify(mesalert) %>;
+var username = <%- JSON.stringify(username) %>;
 var bookArray = <%- JSON.stringify(book) %>;
 </script>   
-<script src="/js/home.js"></script>
+<script src="/js/homelogin.js"></script>
+<script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+<!-- https://ionic.io/ionicons -->
 </body>
 </html>
