--- a/src/public/css/sigin.css
+++ b/src/public/css/sigin.css
@@ -1,11 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap');
 body{
     font-family: 'Roboto', sans-serif;
     color:#222;
-    background-image: 
-    linear-gradient(
-        200deg, #7045d3, #ab65f0
-    );
+    background-color:pink;
     margin: 0;
     min-height: 100vh;
     display: flex;
@@ -28,7 +24,7 @@ a{
 .login .title{
     font-size: x-large;
     font-weight: bold;
-    background-image: url("backgroundtext.jpg");
+    background-image: url("/img/background/backgroundpink.jpg");
     -webkit-background-clip: text;
     color: transparent;
     margin-bottom: 20px;
@@ -91,48 +87,13 @@ a{
     transform: translateY(5px);
     box-shadow: none;
 }
-.login .or{
-    font-size: small;
-    margin-bottom: 20px;
-    position: relative;
-}
-.login .or::after,.login .or::before{
-    position: absolute;
-    width: 50px;
-    height: 1px;
-    content: '';
-    background-image: 
-        linear-gradient(
-            to left, #444, transparent
-    );
-    top: 50%;
-    left: 20px;
-}
-.login .or::after{
-    left: unset;
-    right: 20px;
-    background-image: 
-        linear-gradient(
-            to right, #444, transparent
-    );
-}
-.login .list img{
-    width: 30px;
-}
-.login .list{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 40px;
-    gap: 20px;
-    margin-bottom: 20px;
-}
-.login .item{
-    border: 1px solid #fff;
-    border-radius: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+
 .login .registor{
     font-size: small;
+}
+.error {
+    color: red; /* Màu đỏ */
+}
+.confirm {
+    color: rgb(0, 255, 85); 
 }
