--- a/src/page/home.ejs
+++ b/src/page/home.ejs
@@ -58,7 +58,7 @@
         <a href="/register"><div class="logout" ><img src="/img/logo/signup.png">Đăng ký</div></a>
     </div>
 <script>
-var bookArray = <%- JSON.stringify(book) %>;
+var bookArray = <%- JSON.stringify(books) %>;
 </script>   
 <script src="/js/home.js"></script>
 </body>
